[gd_scene load_steps=5 format=2]

[ext_resource path="res://Obstacle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level2D.gd" type="Script" id=3]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 431, -103, 434, 279, -112, 282, -116, -101 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 431, -103, 434, 279, -112, 282, -116, -101 ) ]

[node name="Level" type="Node"]
script = ExtResource( 3 )

[node name="Navigation2D" type="Navigation2D" parent="."]
position = Vector2( 121, 111 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
position = Vector2( -6, -8 )
navpoly = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Player" parent="Navigation2D" instance=ExtResource( 2 )]
position = Vector2( 257, 33 )

[node name="Obstacle" parent="Navigation2D" instance=ExtResource( 1 )]
position = Vector2( 141, 70 )

[node name="LabelPath" type="Label" parent="."]
margin_left = 593.0
margin_top = 34.0
margin_right = 868.0
margin_bottom = 92.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="LabelPath"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LabelFinished" type="Label" parent="."]
margin_left = 594.0
margin_top = 211.0
margin_right = 791.0
margin_bottom = 228.0
__meta__ = {
"_edit_group_": true
}

[node name="ReferenceRect" type="ReferenceRect" parent="LabelFinished"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LabelNextTarget" type="Label" parent="."]
margin_left = 595.0
margin_top = 130.0
margin_right = 773.0
margin_bottom = 147.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="LabelNextTarget"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LabelTargetLoc" type="Label" parent="."]
margin_left = 597.0
margin_top = 155.0
margin_right = 775.0
margin_bottom = 172.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="LabelTargetLoc"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LabelFinalLoc" type="Label" parent="."]
margin_left = 598.0
margin_top = 182.0
margin_right = 776.0
margin_bottom = 199.0
__meta__ = {
"_edit_group_": true
}

[node name="ReferenceRect" type="ReferenceRect" parent="LabelFinalLoc"]
anchor_right = 1.0
anchor_bottom = 1.0
